--- a/style.css
+++ b/style.css
@@ -59,6 +59,15 @@
     border: 1px solid #008000;
 }
 
+/* services section css */
+.skillsText.card {
+    height: 280px;
+    cursor: default;
+  }
+.card-skill-title {
+    text-align: center;
+}
+
 /* social media icons styling */
 .social-icons {
     font-size: 64px;
